--- a/meetup-helm-chart/templates/wordpress-db.yaml
+++ b/meetup-helm-chart/templates/wordpress-db.yaml
@@ -32,9 +32,9 @@ spec:
 {{ if eq .Values.environment "aws"}}
           volumeMounts:
           - mountPath: "/var/lib/mysql/data"
-            name: mysql-storage
+            name: {{ template "fullname" .}}-mysql-storage
       volumes:
-        - name: mysql-storage
+        - name: {{ template "fullname" .}}-mysql-storage
           persistentVolumeClaim:
             claimName: {{ template "fullname" .}}-aws-db-storage-pvc
 {{ end }}
@@ -42,9 +42,9 @@ spec:
 {{ if eq .Values.environment "dc1"}}
           volumeMounts:
           - mountPath: "/var/lib/mysql/data"
-            name: mysql-storage
+            name: {{ template "fullname" .}}-mysql-storage
       volumes:
-        - name: mysql-storage
+        - name: {{ template "fullname" .}}-mysql-storage
           persistentVolumeClaim:
             claimName: {{ template "fullname" .}}-dc1-db-storage-pvc
 {{ end }}
