--- a/part1/wordpress-storage-class.yaml
+++ b/part1/wordpress-storage-class.yaml
@@ -3,7 +3,7 @@
 apiVersion: storage.k8s.io/v1beta1
 kind: StorageClass
 metadata:
-  name: wordpress-meetup
+  name: meetup-storage-class-00
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: hpe.com/nimble
